# rust_api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.frontend  Makefile  README.md  docker-compose.yml
frontend/: package-lock.json  package.json
frontend/src/: hooks.server.ts
frontend/src/lib/: index.ts
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
frontend/src/routes/car/[id]/: +page.server.ts  +page.svelte
frontend/src/routes/create/: +page.server.ts  +page.svelte
frontend/src/routes/image/[id]/: +server.ts
frontend/src/routes/login/: +page.server.ts  +page.svelte
frontend/src/routes/logout/: +server.ts
frontend/src/routes/register/: +page.server.ts  +page.svelte
migrations/2025-04-29-181657_create_cars/: down.sql  up.sql
migrations/2025-04-29-193531_create_users/: down.sql  up.sql
migrations/2025-04-29-193908_create_images/: down.sql  up.sql
src/: db.rs  lib.rs  main.rs  schema.rs
src/auth/: guards.rs  jwt.rs  middleware.rs
src/config/: jwt_config.rs
src/handlers/: auth_handlers.rs  car_handlers.rs  image_handlers.rs
src/models/: car.rs  image.rs  mod.rs  user.rs
src/repositories/: car_repository.rs  image_repository.rs  user_repository.rs
src/services/: car_service.rs  image_service.rs  user_service.rs
