[package]
name = "salon_api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Diesel + UUID support
diesel = { version = "2.2.10", features = ["postgres","r2d2","chrono","numeric","uuid"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }

# Serde, Chrono, UUID
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4.8", features = ["serde"] }

# Actix, HTTP auth, JWT…
actix-web = "4"
actix-web-httpauth = "0.8.2"
jsonwebtoken = "9.3.1"
bcrypt = "0.17.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.27"