[package]
name = "salon_api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Diesel
diesel = { version = "2.2.10", features = ["postgres","r2d2","chrono","numeric","uuid","serde_json"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }

serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4.8", features = ["serde"] }

# Actix, HTTP auth, JWT…
actix-web = "4"
actix-web-httpauth = "0.8.2"
actix-multipart = "0.7.2"
actix-files = "0.6.6"
jsonwebtoken = "9.3.1"
bcrypt = "0.17.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.27"
futures-util = "0.3.31"
tokio = "1.44.2"
serde_json = "1.0.140"